syntax = "proto3";

import "google/protobuf/empty.proto";

package grpcserver;

option go_package = "grpcserver/proto";


message UrlRequest {
  string url = 1;
}

message UrlResponse {
  string result = 1;
}

message Url {
  string id = 1;
  string url = 2;
}

message UrlRequestBatch {
  repeated Url urls = 1;
}

message UrlResponseBatch {
  repeated Url urls = 1;
}

message DBResponse {
  string status = 1;
  string error = 2;
}

message StatResponse {
  int32 url = 1;
  int32 user = 2;
}

service Shortener {
  rpc CreateURL(UrlRequest) returns (UrlResponse);
  rpc CreateURLHandle(UrlRequest) returns (UrlResponse);
  rpc CreateURLBatch(UrlRequestBatch) returns (UrlResponseBatch);
  rpc PingDB(google.protobuf.Empty) returns (DBResponse);
  rpc GetURL(UrlRequest) returns (UrlResponse);
  rpc GetUserURLs(google.protobuf.Empty) returns (UrlResponseBatch);
  rpc GetStats(google.protobuf.Empty) returns (StatResponse);
  rpc DeleteUserURLs(UrlResponseBatch) returns (google.protobuf.Empty);
}